[package]
name = "agentjs"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "A lightweight JavaScript execution runtime for AI agents"
license = "MIT"

[features]
# Native is always compiled and is the runtime default. Boa is available only
# when this optional feature is enabled and callers explicitly select it.
default = []
boa-backend = ["dep:boa_engine", "dep:boa_runtime"]
conformance = [
    "boa-backend",
    "boa_engine/experimental",
    "boa_engine/intl_bundled",
    "boa_engine/temporal",
]

[dependencies]
boa_engine = { path = "boa/core/engine", optional = true, default-features = false, features = [
    "annex-b",
    "float16",
    "xsum",
] }
boa_runtime = { path = "boa/core/runtime", optional = true, default-features = false, features = [
    "annex-b",
    "test262",
] }
regex = "1"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "unwind"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
